--- a/assets/scss/molecules/_post-type-list-table.scss
+++ b/assets/scss/molecules/_post-type-list-table.scss
@@ -61,6 +61,12 @@
 			
 			a {
 				padding: 0 10px;
+				
+				&:not(.current) {
+					&:hover {
+						color: $primary;
+					}
+				}
 			}
 			
 			@include mobile-max {
